# nest-discord

./: .eslintrc  .npmignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
example/: BUILD.bazel  app.module.ts  help.command.ts  main.ts
src/: BUILD.bazel  collections.ts  constants.ts  discord.module.ts  discord.service.ts  index.ts  package.json  tokens.ts  utils.ts
src/decorators/: arg.decorator.ts  command.decorator.ts  handle.decorator.ts  index.ts  option.decorator.ts
src/interfaces/: arg-options.interface.ts  command-execute.interface.ts  command-handler.interface.ts  command-options.interface.ts  command.interface.ts  discord-module-options.interface.ts  index.ts  option-options.interface.ts  types.ts
src/services/: commands-explorer.service.ts  index.ts
tools/: defaults.bzl
tools/scripts/: npm.sh
