load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

package(default_visibility = ["//visibility:public"])

exports_files([
    "tsconfig.json",
])

pkg_npm(
    name = "npm",
    srcs = [
        "LICENSE",
        "README.md",
        "package.json",
    ],
    deps = [
        "//src",
    ],
)
